tests/test134.rael.exp
Error [tests/test134.rael:1:14]: Invalid slicing
| log "string" at (1 to 100)
|              ^
